--- a/style.css
+++ b/style.css
@@ -1,11 +1,15 @@
 html,
 body {
-  margin  : 0;
-  padding : 0;
-  width   : 100vw;
-  height  : 100vh;
-  position: relative;
-  overflow: hidden;
+  margin         : 0;
+  padding        : 0;
+  width          : 100vw;
+  height         : 100vh;
+  position       : relative;
+  overflow       : hidden;
+  display        : flex;
+  justify-content: center;
+  align-items    : center;
+  background-color: rgb(28, 28, 28);
 }
 
 canvas {
