--- a/style.css
+++ b/style.css
@@ -1,14 +1,14 @@
 html,
 body {
-  margin         : 0;
-  padding        : 0;
-  width          : 100vw;
-  height         : 100vh;
-  position       : relative;
-  overflow       : hidden;
-  display        : flex;
-  justify-content: center;
-  align-items    : center;
+  margin          : 0;
+  padding         : 0;
+  width           : 100vw;
+  height          : 100vh;
+  position        : relative;
+  overflow        : hidden;
+  display         : flex;
+  justify-content : center;
+  align-items     : center;
   background-color: rgb(28, 28, 28);
 }
 
@@ -32,6 +32,10 @@ canvas {
 
 .container:hover {
   opacity: 1;
+}
+
+.loadingclass {
+  color: white;
 }
 
 .value-button {
